# IDR

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AboutDlg.cpp  AboutDlg.dfm  AboutDlg.h  ActiveProcesses.cpp  ActiveProcesses.dfm  ActiveProcesses.h  Analyze1.cpp  Analyze2.cpp  AnalyzeArguments.cpp  CMagic.txt  CMakeLists.txt  CMakePresets.json  CXrefs.cpp  Decompiler.cpp  Decompiler.h  Disasm.cpp  Disasm.h  EditFieldsDlg.cpp  EditFieldsDlg.dfm  EditFieldsDlg.h  EditFunctionDlg.cpp  EditFunctionDlg.dfm  EditFunctionDlg.h  Exit.cpp  Exit.dfm  Exit.h  Explorer.cpp  Explorer.dfm  Explorer.h  FindDlg.cpp  FindDlg.dfm  FindDlg.h  Hex2Double.cpp  Hex2Double.dfm  Hex2Double.h  IDCGen.cpp  (+61 more)
Plugins/: globals.h  pexforms.bpf
Sources/Forms/: ActiveProcesses.cpp  EditFieldsDlg.cpp  Explorer.cpp  Explorer.h  KBViewer.cpp  Main.cpp  Main.dfm  Main.h  Plugins.cpp  StringInfo.cpp  StringInfo.h  TypeInfo2.cpp  TypeInfo2.h
Sources/Libs/: Decompiler.cpp  Decompiler.h  Disasm.cpp  Disasm.h  IDCGen.cpp  IDCGen.h  Infos.cpp  Infos.h  KnowledgeBase.cpp  KnowledgeBase.h  Misc.cpp  Misc.h  PEHeader.cpp  PEHeader.h  ProcessManager.cpp  Resources.cpp  Resources.h  Singleton.cpp  Threads.cpp
